--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 .import/
 /android/
 export.cfg
-export_presets.cfg
+# Note: export_presets.cfg is needed for GitHub Actions deployment
+
+# Build outputs
+build/
 
 # Imported translations (automatically generated from CSV files)
 *.translation
