--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -5,103 +5,52 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
-  export-web:
+  export_game:
     runs-on: ubuntu-latest
-    name: Web Export
+    name: Export and Deploy
+    strategy:
+      matrix:
+        preset:
+          - name: Web
+            output: builds/Web/index.html
+
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Godot CLI
+        run: |
+          curl -L -o godot.zip https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_linux.x86_64.zip
+          unzip godot.zip -d godot
+          chmod +x godot/Godot_v4.4.1-stable_linux.x86_64
+
+      - name: Setup export templates and Android build template
+        run: |
+          curl -L -o templates.tpz https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_export_templates.tpz
+          mkdir -p ~/.local/share/godot/export_templates/4.4.1.stable/
+          unzip templates.tpz -d ~/.local/share/godot/export_templates/4.4.1.stable/
+
+          # Move nested templates up one level if needed
+          if [ -d ~/.local/share/godot/export_templates/4.4.1.stable/templates ]; then
+            mv ~/.local/share/godot/export_templates/4.4.1.stable/templates/* ~/.local/share/godot/export_templates/4.4.1.stable/
+            rm -rf ~/.local/share/godot/export_templates/4.4.1.stable/templates
+          fi
+
+      - name: Export ${{ matrix.preset.name }}
+        run: |
+          mkdir -p $(dirname "${{ matrix.preset.output }}")
+
+          ./godot/Godot_v4.4.1-stable_linux.x86_64 \
+            --headless \
+            --path . \
+            --export-release "${{ matrix.preset.name }}" "${{ matrix.preset.output }}"
+
+      - name: Deploy Web to GitHub Pages 🚀
+        if: matrix.preset.name == 'Web'
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          lfs: true
-
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/export_templates/
-          mkdir -v -p ~/.config/godot/
-
-      - name: Download Godot
-        run: |
-          wget -q https://downloads.tuxfamily.org/godotengine/4.4.1/Godot_v4.4.1-stable_linux.x86_64.zip
-          unzip Godot_v4.4.1-stable_linux.x86_64.zip
-          mv Godot_v4.4.1-stable_linux.x86_64 godot
-
-      - name: Download Export Templates
-        run: |
-          wget -q https://downloads.tuxfamily.org/godotengine/4.4.1/Godot_v4.4.1-stable_export_templates.tpz
-          unzip Godot_v4.4.1-stable_export_templates.tpz
-          mv templates/* ~/.local/share/godot/export_templates/
-
-      - name: Setup Export Presets
-        run: |
-          cat > export_presets.cfg << 'EOF'
-          [preset.0]
-
-          name="Web"
-          platform="Web"
-          runnable=true
-          dedicated_server=false
-          custom_features=""
-          export_filter="all_resources"
-          include_filter=""
-          exclude_filter=""
-          export_path="build/index.html"
-          encryption_include_filters=""
-          encryption_exclude_filters=""
-          encrypt_pck=false
-          encrypt_directory=false
-
-          [preset.0.options]
-
-          custom_template/debug=""
-          custom_template/release=""
-          variant/extensions_support=false
-          vram_texture_compression/for_desktop=true
-          vram_texture_compression/for_mobile=false
-          html/export_icon=true
-          html/custom_html_shell=""
-          html/head_include=""
-          html/canvas_resize_policy=2
-          html/focus_canvas_on_start=true
-          html/experimental_virtual_keyboard=false
-          progressive_web_app/enabled=false
-          progressive_web_app/offline_page=""
-          progressive_web_app/display=1
-          progressive_web_app/orientation=0
-          progressive_web_app/icon_144x144=""
-          progressive_web_app/icon_180x180=""
-          progressive_web_app/icon_512x512=""
-          progressive_web_app/background_color=Color(0, 0, 0, 1)
-          EOF
-
-      - name: Build
-        run: |
-          mkdir -p build
-          ./godot --headless --verbose --export-release "Web" build/index.html
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./build
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: export-web
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          branch: gh-pages
+          folder: ./builds/Web
